Work on DB programaming and sync (insert.php) corrected link paths on all webpages corrected spotlight on IE and Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -3529,7 +3529,7 @@ nav a:hover {
   font-size: 0.875em;
   height: 1.750em;
   border: none;
-  width: 100%;
+  width: 99%;
   margin-top: 0.625em;
 }
 
